# kiro-FIFA-Predictor

./: .gitignore  POWER.md  README.md  mcp.json  pyproject.toml
data/: calibration.json  groups.json  match_results.json  non_participant_teams.json  predictions_log.json  schedule.json  teams.json  teams_fallback.json
scripts/: fallback_data.py
src/: __init__.py  server.py
src/data/: __init__.py  data_manager.py
src/engine/: __init__.py  coach_style.py  dixon_coles.py  dynamic_factor.py  elo_model.py  ensemble.py  h2h_model.py  monte_carlo.py  prediction_engine.py
src/output/: __init__.py  formatter.py  markdown_renderer.py  rich_renderer.py
src/tools/: accuracy_stats.py  predict_champion.py  predict_group.py  predict_match.py  team_info.py  update_results.py
src/utils/: __init__.py  accuracy_tracker.py  constants.py  team_matcher.py  validator.py
tests/: __init__.py
tests/integration/: test_edge_cases.py  test_mcp_tools.py  test_startup_validation.py
tests/properties/: test_prop_accuracy.py  test_prop_coach_style.py  test_prop_data_integrity.py  test_prop_dixon_coles.py  test_prop_dynamic_factor.py  test_prop_ensemble.py  test_prop_group_sim.py  test_prop_probabilities.py  test_prop_streaks.py  test_prop_team_matcher.py
tests/unit/: test_accuracy_tracker.py  test_coach_style.py  test_data_manager.py  test_dixon_coles.py  test_dynamic_factor.py  test_elo_model.py  test_ensemble.py  test_h2h_model.py  test_monte_carlo.py  test_output_formatter.py  test_predict_champion.py  test_predict_match_tool.py  test_prediction_engine.py  test_server.py  (+3 more)
(+6 files in other folders)
