[project]
name = "kiro-fifa-predictor"
version = "0.1.0"
description = "2026 FIFA World Cup Match Prediction MCP Power for Kiro"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]",
    "numpy",
    "rich",
]

[project.scripts]
kiro-fifa-predictor = "src.server:main"

[project.optional-dependencies]
dev = [
    "pytest",
    "hypothesis",
    "pytest-asyncio",
    "pytest-cov",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src", "data"]
